--- a/templates/renewed_reminder.html
+++ b/templates/renewed_reminder.html
@@ -2,7 +2,7 @@
 {% block body %}
     <tr>
         <td>
-            <p>Dear {{disk.borrowed_by.full_name}},</p>
+            <p>Dear {{disk.hold_by.full_name}},</p>
             <p>Please be reminded that the VCD/DVD(s) you borrowed <b>{{disk.title_en}}/{{disk.title_ch}}</b> will be due on <b>{{disk.due_date}}</b></p>
             <p>
                 If you wish to return the VCD/DVD(s), you may EITHER:<br/>
