Purify Signed-off-by: JohnMave126 <johnmave126@gmail.com>

--- a/templates/overdue.html
+++ b/templates/overdue.html
@@ -3,7 +3,7 @@
     <tr>
         <td>
             <p>Dear {{disk.hold_by.full_name}},</p>
-            <p>Please be reminded that the VCD/DVD(s) you borrowed <b>{{disk.title_en}}/{{disk.title_ch}}</b> was/were due on <b>{{disk.due_at}}</b></p>
+            <p>Please be reminded that the VCD/DVD(s) you borrowed, <b>{{disk.title_en}}/{{disk.title_ch}}</b>, was/were due on <b>{{disk.due_at}}</b></p>
             <p>We urge you to return the VCD/DVD(s) as soon as possible since there is a overdue fine of 5HKD per day up to 50HKD couting after due date.</p>
             <p>
                 You can EITHER:<br/>
