--- a/templates/reminder.html
+++ b/templates/reminder.html
@@ -3,7 +3,7 @@
     <tr>
         <td>
             <p>Dear {{disk.hold_by.full_name}},</p>
-            <p>Please be reminded that the VCD/DVD(s) you borrowed <b>{{disk.title_en}}/{{disk.title_ch}}</b> will be due on <b>{{disk.due_at}}</b></p>
+            <p>Please be reminded that the VCD/DVD(s) you borrowed, <b>{{disk.title_en}}/{{disk.title_ch}}</b>, will be due on <b>{{disk.due_at}}</b></p>
             <p>
                 If you wish to return the VCD/DVD(s), you may EITHER:<br/>
                 1) Come to our VCD/DVD Library counter located next to <b style="color:#0b5394;">McCafé (LG5)</b> during <b style="color:#0b5394;">17:00~18:30</b> on weekdays (except public holidays),<br/>
