--- a/templates/base_email.html
+++ b/templates/base_email.html
@@ -44,10 +44,10 @@
     </head>
     <body leftmargin="0" marginwidth="0" topmargin="0" marginheight="0" offset="0" style="width:100% !important; -webkit-text-size-adjust:100%; -ms-text-size-adjust:100%; margin:0; padding:0;">
         <center>
-            <table cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;margin:0; padding:0; width:100% !important; line-height: 100% !important;">
+            <table cellpadding="0" cellspacing="0" border="0" id="backgroundTable" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;margin:0; padding:0; font-size:15px; width:100% !important; line-height: 110% !important;">
                 <tr>
                     <td valign="top"> 
-                        <table cellpadding="0" cellspacing="0" border="0" align="center" width="600" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;">
+                        <table cellpadding="0" cellspacing="0" border="0" align="left" width="600" style="border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;">
                             {% block body %}{% endblock %}
                         </table>
                     </td>
